tests/fail/parse-error-006.virtue
print 42

# error: parse error
#  --> test.virtue:1:7
#    |
#  1 | print 42
#    |       ^ expected format string
#
